# finance-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md
backend/: .env.example  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/tests/: conftest.py  test_summary.py  test_transactions.py
frontend/: package.json
frontend/__tests__/: transactions.test.tsx
frontend/app/: layout.tsx
frontend/app/actions/: transactions.ts
frontend/app/transactions/: page.tsx
frontend/app/transactions/[id]/edit/: page.tsx
frontend/app/transactions/new/: page.tsx
frontend/components/: Dashboard.tsx  Navbar.tsx  PieChart.tsx  TransactionForm.tsx  TransactionList.tsx
